# grdf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl  cliff.toml  shell.nix
.github/workflows/: ci.yml
src/: btree_dataset.rs  graph.rs  hash_dataset.rs  impl.rs  lib.rs  loc.rs  macros.rs  meta.rs  term.rs  utils.rs  view.rs  yaml.rs
src/graph/: view.rs
src/impl/: btree_dataset.rs  hash_dataset.rs
src/impl/btree_dataset/: graph.rs
src/impl/hash_dataset/: graph.rs
src/utils/: isomorphism.rs  substitution.rs
src/utils/isomorphism/: btree.rs  hash.rs
tests/: iso-negative.rs  iso.rs
tests/utils/: generate-iso-test.rb  iso.rs.template
