[package]
name = "grdf"
version = "0.20.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"
categories = ["data-structures"]
keywords = ["grdf", "rdf", "semantic-web"]
description = "Generalized RDF graphs and datasets"
repository = "https://github.com/timothee-haudebourg/grdf"
documentation = "https://docs.rs/grdf"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []
meta = [ "locspan", "rdf-types/meta" ]

[dependencies]
iref = "3.0"
rdf-types = "0.16"
derivative = "2.2.0"
hashbrown = "0.13.1"
im = "15.1.0"
locspan = { version = "0.7.9", optional = true }
linked-data = { path = "/home/work/Documents/Spruce/linked-data/linked-data" }

[dev-dependencies]
static-iref = "3.0.0"