[package]
name = "grdf"
version = "0.21.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"
categories = ["data-structures"]
keywords = ["grdf", "rdf", "semantic-web"]
description = "Generalized RDF graphs and datasets"
repository = "https://github.com/timothee-haudebourg/grdf"
documentation = "https://docs.rs/grdf"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []
meta = [ "locspan", "rdf-types/meta" ]

[dependencies]
iref = "3.0"
rdf-types = "0.18"
derivative = "2.2.0"
hashbrown = "0.13.1"
locspan = { version = "0.8", optional = true }

[dev-dependencies]
static-iref = "3.0.0"