[package]
name = "grdf"
version = "0.22.1"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"
categories = ["data-structures"]
keywords = ["grdf", "rdf", "semantic-web"]
description = "Generalized RDF graphs and datasets"
repository = "https://github.com/timothee-haudebourg/grdf"
documentation = "https://docs.rs/grdf"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []
meta = [ "locspan", "rdf-types/meta" ]
serde = ["dep:serde", "rdf-types/serde"]

[dependencies]
iref = "3.0"
rdf-types = "0.18"
educe = "0.4.23"
hashbrown = "0.13.1"
locspan = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
static-iref = "3.0.0"